@@ -1,3 +1,10 @@
+Tue Jul 29 01:15:35 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimAccountsWindow.cpp:
+	* src/QGaimAccountsWindow.h:
+	  - The edit and delete account buttons are disabled until an
+	    account is selected.
+
 Tue Jul 29 01:11:50 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimAccountEditor.cpp:
